Met à jour cohesion-territoires-conseillers-numeriques-france-services

--- a/data/benefits/javascript/cohesion-territoires-conseillers-numeriques-france-services.yml
+++ b/data/benefits/javascript/cohesion-territoires-conseillers-numeriques-france-services.yml
@@ -1,9 +1,9 @@
-label: Conseiller·e·s numériques France Services
+label: Conseillers numériques France Services
 institution: cohesion_territoires
-description: Grâce à ce dispositif, des conseiller·e·s vous accompagnent pour
-  devenir autonome dans vos démarches numériques. Des ateliers individuels ou
-  collectifs sont proposés <a target="_blank" title="Ateliers numériques -
-  Nouvelle fenêtre" rel="noopener"
+description: Grâce à ce dispositif, des conseillers et conseillères vous
+  accompagnent pour devenir autonome dans vos démarches numériques. Des ateliers
+  individuels ou collectifs sont proposés <a target="_blank" title="Ateliers
+  numériques - Nouvelle fenêtre" rel="noopener"
   href="https://cartographie.conseiller-numerique.gouv.fr/">près de chez
   vous</a>.
 prefix: les
