--- a/data/benefits/openfisca/visale_eligibilite.yml
+++ b/data/benefits/openfisca/visale_eligibilite.yml
@@ -1,14 +1,13 @@
 label: Garantie Visale
-teleservice: https://fo.visale.fr/#!/register/locataire
-prefix: "la "
-entity: menages
-openfiscaPeriod: thisMonth
 institution: action_logement
 description: La garantie Visale est une caution accordée par Action logement au
   locataire qui veut louer un logement. Elle couvre les loyers et charges
   impayés de la résidence principale du locataire jusqu'à 36 mensualités.
-conditions:
-  - Ne pas être employé·e par une entreprise publique.
-link: https://www.service-public.fr/particuliers/vosdroits/F33453
+prefix: "la "
+conditions: []
 type: bool
 periodicite: ponctuelle
+link: https://www.service-public.fr/particuliers/vosdroits/F33453
+teleservice: https://fo.visale.fr/#!/register/locataire
+entity: menages
+openfiscaPeriod: thisMonth
