--- a/data/benefits/javascript/region-ile-de-france-forfait-navigo-jeunes-weekend.yml
+++ b/data/benefits/javascript/region-ile-de-france-forfait-navigo-jeunes-weekend.yml
@@ -18,9 +18,9 @@ conditions_generales:
       - "11"
 profils: []
 conditions:
-  - Acquérir le forfait Navigo Jeunes Weekend pour le prix journalier de 4,10€
-    sur les zones 1-3, 8,95€ sur les zones 1-5 et 5,25€ sur les zones 3-5, et le
-    charger sur un Passe Navigo ou l'Application Île-de-France Mobilités.
+  - Acquérir le forfait Navigo Jeunes Weekend pour un prix journalier de 4,10€
+    (zones 1-3, 8,95€ (zones 1-5) ou 5,25€ (zones 3-5), et le charger sur un
+    Passe Navigo ou l'Application Île-de-France Mobilités.
 type: bool
 unit: €
 periodicite: autre
