--- a/data/benefits/javascript/pole-emploi-aif.yml
+++ b/data/benefits/javascript/pole-emploi-aif.yml
@@ -2,18 +2,18 @@ label: aide Individuelle à la Formation (AIF)
 institution: pole_emploi
 description: Pôle Emploi peut prendre en charge tout ou partie du coût de votre
   formation si elle est nécessaire pour votre retour à l’emploi.
+prefix: l’
 conditions_generales: []
-conditions:
-  - Demander un devis à l’organisme de formation et le transmettre à votre
-    conseiller·e Pôle Emploi.
 profils:
   - type: chomeur
     conditions: []
-link: https://www.pole-emploi.fr/candidat/en-formation/mes-aides-financieres/laide-individuelle-a-la-formatio.html
-instructions: https://www.pole-emploi.fr/candidat/en-formation/mes-aides-financieres/laide-individuelle-a-la-formatio.html
-prefix: l’
+conditions:
+  - Demander un devis à l’organisme de formation et le transmettre à votre
+    conseiller ou conseillère Pôle Emploi.
+interestFlag: null
 type: bool
 unit: €
 periodicite: ponctuelle
-interestFlag: null
+link: https://www.pole-emploi.fr/candidat/en-formation/mes-aides-financieres/laide-individuelle-a-la-formatio.html
+instructions: https://www.pole-emploi.fr/candidat/en-formation/mes-aides-financieres/laide-individuelle-a-la-formatio.html
 top: 10
