Met à jour region-ile-de-france-ecoute-etudiants

--- a/data/benefits/javascript/region-ile-de-france-ecoute-etudiants.yml
+++ b/data/benefits/javascript/region-ile-de-france-ecoute-etudiants.yml
@@ -1,8 +1,9 @@
-label: écoute Étudiant·e·s Île-de-France
+label: écoute Étudiants Île-de-France
 institution: region_ile_de_france
 description: Cette aide vous permet d'évaluer votre état psychologique,
   d'obtenir des ressources pour vous accompagner et de bénéficier de
   consultations gratuites avec des psychologues si besoin.
+prefix: l’
 conditions_generales:
   - type: regions
     values:
@@ -10,11 +11,10 @@ conditions_generales:
 profils:
   - type: etudiant
     conditions: []
-link: https://www.iledefrance.fr/ecoute-etudiants-ile-de-france-plateforme-daide-pour-les-etudiants-en-souffrance
-teleservice: https://ecouteetudiants-iledefrance.fr/home
-prefix: l’
 type: float
 unit: séances
 periodicite: autre
 legend: maximum
 montant: 3
+link: https://www.iledefrance.fr/ecoute-etudiants-ile-de-france-plateforme-daide-pour-les-etudiants-en-souffrance
+teleservice: https://ecouteetudiants-iledefrance.fr/home
