--- a/data/benefits/openfisca/contrat_engagement_jeune.yml
+++ b/data/benefits/openfisca/contrat_engagement_jeune.yml
@@ -10,8 +10,7 @@ conditions:
   - Faire votre demande d'accompagnement auprès de votre <a target="_blank"
     title="Missions Locales - Nouvelle fenêtre" rel="noopener"
     href="https://www.unml.info/les-missions-locales/annuaire/">Mission
-    Locale</a> ou de votre <a target="_blank" title="Agences Pôle Emploi -
-    Nouvelle fenêtre" rel="noopener"
+    Locale</a> ou de votre <a target="_blank" title="Agences Pôle Emploi - Nouvelle fenêtre" rel="noopener"
     href="https://www.pole-emploi.fr/annuaire/votre-pole-emploi.html">agence
     Pôle Emploi</a>.
   - Être indépendant, notamment ne pas bénéficier d'un soutien financier
@@ -23,6 +22,6 @@ link: https://www.service-public.fr/particuliers/vosdroits/F32700
 instructions: https://www.service-public.fr/particuliers/vosdroits/F32700
 entity: individus
 openfiscaPeriod: thisMonth
+setToZeroRecently: true
 etablissements:
   - mission_locale
-setToZeroRecently: true
