--- a/data/benefits/openfisca/carte_sncf_eleve_apprenti_eligibilite.yml
+++ b/data/benefits/openfisca/carte_sncf_eleve_apprenti_eligibilite.yml
@@ -1,13 +1,12 @@
 label: carte SNCF élèves et apprentis
 institution: sncf
-description: La carte SNCF élèves et apprentis permet d'obtenir des réductions
-  sur ses trajets TGV INOUI et INTERCITES.
-prefix: la
+description: La carte SNCF élèves et apprentis permet d'obtenir des réductions sur ses trajets TGV INOUI et INTERCITES.
 conditions:
   - Demander la carte directement dans la boutique SNCF de votre choix.
-type: bool
-periodicite: annuelle
 link: https://www.sncf.com/fr/offres-voyageurs/cartes-tarifs-grandes-lignes/eleves-apprentis
 instructions: https://www.sncf.com/fr/offres-voyageurs/cartes-tarifs-grandes-lignes/eleves-apprentis
+prefix: la
+type: bool
+periodicite: annuelle
 entity: individus
 openfiscaPeriod: thisMonth
