Corrcetion problème formatage fichier yaml

--- a/data/benefits/openfisca/nouvelle_aquitaine_carte_solidaire.yml
+++ b/data/benefits/openfisca/nouvelle_aquitaine_carte_solidaire.yml
@@ -14,7 +14,8 @@ teleservice: https://cartesolidaire-nouvelle-aquitaine.cba.fr/
 instructions: ""
 entity: individus
 openfiscaPeriod: thisMonth
-type: quotient_familial
+conditions:
+  - type: quotient_familial
     period: month
     value: 870
     operator: "<"
