Supprime les points médians WIP

--- a/data/benefits/javascript/auvergne-rhone-alpes-bourse-merite.yml
+++ b/data/benefits/javascript/auvergne-rhone-alpes-bourse-merite.yml
@@ -1,6 +1,7 @@
 label: bourse au mérite
 institution: region_auvergne_rhone_alpes
-description: La bourse au mérite permet de récompenser les lycéen·ne·s et les
+description:
+  La bourse au mérite permet de récompenser les lycéens ou lycéennes et les
   élèves en formation professionnelle méritants par un versement en une fois de
   500 euros. La demande doit être effectuée entre le jour des résultats du
   Bac/CAP/BP et le 31 octobre.
