--- a/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
+++ b/data/benefits/javascript/hauts-de-france-aide-à-la-restauration-des-étudiants-boursiers-en-filière-sanitaire-et-sociale.yml
@@ -1,8 +1,8 @@
-label: aide à la restauration des étudiant·e·s boursier·e·s en filière sanitaire
+label: aide à la restauration des étudiants ou étudiantes boursier·e·s en filière sanitaire
   et sociale
 institution: hauts_de_france
 description: Cette aide vise à offrir la gratuité des repas dans les restaurants
-  universitaires aux étudiant·e·s boursier·e·s en filière sanitaire et sociale
+  universitaires aux étudiants ou étudiantes boursier·e·s en filière sanitaire et sociale
   (3,30 € par repas dans la limite de 100 repas sur l'année scolaire).
 conditions:
   - Être inscrit·e dans un établissement d'enseignement supérieur partenaire de
