--- a/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/hauts-de-france-bourses-etudes-sanitaires-et-sociales.yml
@@ -1,7 +1,7 @@
 label: bourse d’Études Sanitaires et Sociales
 institution: hauts_de_france
 description: Cette aide de la Région des Hauts-de-France vise à soutenir
-  financièrement les étudiant·e·s qui préparent un diplôme du secteur sanitaire
+  financièrement les étudiants ou étudiantes qui préparent un diplôme du secteur sanitaire
   et social.
 conditions:
   - Être inscrit·e dans un établissement de formation des travailleurs sociaux
