--- a/data/benefits/javascript/occitanie-bourse-etudes-sanitaires-et-sociales.yml
+++ b/data/benefits/javascript/occitanie-bourse-etudes-sanitaires-et-sociales.yml
@@ -1,6 +1,7 @@
 label: bourse d’Etudes Sanitaires et Sociales
 institution: region_occitanie
-description: Cette bourse est destinée aux élèves et étudiant·e·s inscrit·e·s en
+description:
+  Cette bourse est destinée aux élèves et étudiants ou étudiantes inscrit·e·s en
   formations paramédicales, de sages-femmes ou en travail social dans un centre
   de formation agréé par la Région Occitanie/Pyrénées-Méditerranée.
 conditions:
