--- a/data/benefits/javascript/occitanie-premier-equipement-professionnel.yml
+++ b/data/benefits/javascript/occitanie-premier-equipement-professionnel.yml
@@ -1,7 +1,7 @@
 label: Premier Équipement Professionnel
 institution: region_occitanie
 description: L’opération Gratuité Premier Équipement Professionnel est destinée
-  à aider les lycéen·ne·s en formation professionnelle de la région Occitanie en
+  à aider les lycéens ou lycéennes en formation professionnelle de la région Occitanie en
   fournissant outillages et vêtements nécessaires au suivi de la formation.
 conditions:
   - Être en possession de la <a href="https://www.laregion.fr/-cartejeune-"
