--- a/data/benefits/javascript/region-bourgogne-franche-comte-abonnement-scolaire-bfc.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-abonnement-scolaire-bfc.yml
@@ -1,7 +1,7 @@
 label: abonnement scolaire BFC
 institution: region_bourgogne_franche_comte
 description: L'abonnement permettant la gratuité du transport sur le parcours
-  domicile/étude des collégien·ne·s et lycéen·ne·s, externes,
+  domicile/étude des collégiens ou collégiennes et lycéens ou lycéennes, externes,
   demi-pensionnaires, ou internes en Bourgogne-Franche-Comté.
 prefix: l’
 conditions_generales:
