--- a/data/benefits/javascript/region-bourgogne-franche-comte-restauration-familles-boursieres.yml
+++ b/data/benefits/javascript/region-bourgogne-franche-comte-restauration-familles-boursieres.yml
@@ -1,4 +1,4 @@
-label: aides à l'hébergement et la restauration des lycéen·ne·s
+label: aides à l'hébergement et la restauration des lycéens ou lycéennes
 institution: region_bourgogne_franche_comte
 description: Cette aide vous permet d'obtenir une déduction sur vos frais
   d’hébergement et/ou de restauration facturés par les établissements.
