--- a/data/benefits/javascript/region-bretagne-aide-qualif-emploi.yml
+++ b/data/benefits/javascript/region-bretagne-aide-qualif-emploi.yml
@@ -1,7 +1,7 @@
 label: aide QUALIF Emploi
 institution: region_bretagne
 description: La Région finance une large palette de formations qualifiantes pour
-  favoriser la montée en compétences des breton·ne·s et répondre aux besoins en
+  favoriser la montée en compétences des résidant en Bretagne et répondre aux besoins en
   recrutement des entreprises.
 conditions:
   - Être en recherche d'emploi et souhaiter faire une formation dans un des <a
