--- a/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
@@ -1,6 +1,7 @@
 label: Bourse « Jeunes à l’international » – Etudiant·e·s en BTS et BUT
 institution: region_bretagne
-description: La Région Bretagne finance les étudiant·e·s en BTS et BUT qui
+description:
+  La Région Bretagne finance les étudiants ou étudiantes en BTS et BUT qui
   souhaitent effectuer un stage professionnel ou un séjour d’études à
   l’étranger.
 conditions:
