--- a/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-lycee-pro.yml
@@ -1,6 +1,7 @@
-label: bourse « Jeunes à l’international » – Lycéen·ne·s professionnel·le·s
+label: bourse « Jeunes à l’international » – lycéens ou lycéennes professionnel·le·s
 institution: region_bretagne
-description: La région Bretagne finance les lycéen·ne·s professionnel·le·s qui
+description:
+  La région Bretagne finance les lycéens ou lycéennes professionnel·le·s qui
   souhaitent effectuer un stage professionnel à l’étranger.
 conditions:
   - "Être inscrit·e en lycée en formation professionnelle de niveau 3 ou 4 :
