--- a/data/benefits/javascript/region-hauts-de-france-aide-scola-lycee.yml
+++ b/data/benefits/javascript/region-hauts-de-france-aide-scola-lycee.yml
@@ -1,6 +1,7 @@
-label: aide complémentaire à la scolarité des lycéen·ne·s
+label: aide complémentaire à la scolarité des lycéens ou lycéennes
 institution: hauts_de_france
-description: La Région accorde des aides financières aux lycéen·ne·s rencontrant
+description:
+  La Région accorde des aides financières aux lycéens ou lycéennes rencontrant
   des difficultés financières afin de participer aux dépenses liées à la
   scolarité (restauration, hébergement, manuels scolaires, équipement
   professionnel, transport) ou à une situation exceptionnelle.
