--- a/data/benefits/javascript/region-hauts-de-france-fonds-regional-social-urgence.yml
+++ b/data/benefits/javascript/region-hauts-de-france-fonds-regional-social-urgence.yml
@@ -1,7 +1,7 @@
 label: fonds Régional Social d’Urgence (FRSU)
 institution: hauts_de_france
 description: La Région propose d'apporter une aide financière personnalisée aux
-  étudiant·e·s en difficulté financière.
+  étudiants ou étudiantes en difficulté financière.
 conditions:
   - Être inscrit·e dans un établissement d'enseignement supérieur reconnu par le
     Ministère de l'enseignement supérieur.
