--- a/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourses-mobilite-etudiants-dut-licence-master.yml
@@ -1,7 +1,8 @@
-label: Bourses Mobilité pour les étudiant·e·s de BUT, licence, master
+label: Bourses Mobilité pour les étudiants ou étudiants de BUT, licence, master
 imgSrc: ""
 institution: region_ile_de_france
-description: La Région Ile-de-France apporte aux étudiant·e·s francilien·ne·s
+description:
+  La Région Ile-de-France apporte aux étudiants ou étudiantes résidant en Île-de-France
   inscrit·e·s en BUT, licence ou master dans un établissement francilien
   partenaire une aide financière pour réaliser un stage ou une période d'études
   à l'étranger, d'une durée de 1 à 10 mois maximum, durant l'année
