--- a/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
+++ b/data/benefits/javascript/region-occitanie-bourse-de-stage-erasmus-formations-sanitaires-sociales.yml
@@ -1,6 +1,7 @@
 label: bourse de stage ERASMUS+ formations sanitaire et sociale
 institution: region_occitanie
-description: La Région favorise la mobilité de stage des étudiant·e·s de la
+description:
+  La Région favorise la mobilité de stage des étudiants ou étudiantes de la
   filière Sanitaire et Sociale.
 prefix: la
 conditions_generales:
