--- a/data/benefits/javascript/region-occitanie-mobilite-internationale-etudiant·e·s.yml
+++ b/data/benefits/javascript/region-occitanie-mobilite-internationale-etudiant·e·s.yml
@@ -1,6 +1,6 @@
-label: aides à la mobilité internationale des étudiant·e·s
+label: aides à la mobilité internationale des étudiants ou étudiantes
 institution: region_occitanie
-description: La Région soutient financièrement les étudiant·e·s qui effectuent
+description: La Région soutient financièrement les étudiants ou étudiantes qui effectuent
   une mobilité à l’étranger (stage ou séjour d'études) dans le cadre de leur
   cursus de formation au sein d’<a target="_blank" rel="noopener" title="établissements partenaires - Nouvelle fenêtre"
   href="https://www.laregion.fr/Aides-mobilite-etudiants">un des établissements
