--- a/data/benefits/javascript/region_bretagne-aide-au-premier-équipement-professionnel-des-lycéen-ne-s.yml
+++ b/data/benefits/javascript/region_bretagne-aide-au-premier-équipement-professionnel-des-lycéen-ne-s.yml
@@ -1,12 +1,12 @@
-label: Aide au premier équipement professionnel des lycéen·ne·s
+label: Aide au premier équipement professionnel des lycéens ou lycéennes
 institution: region_bretagne
 description: L'aide au premier équipement professionnel est une aide financière
-  qui vous est versée si vous êtes lycéen·ne. Elle vous aidera à acheter
+  qui vous est versée si vous êtes lycéen ou lycéenne. Elle vous aidera à acheter
   l’équipement professionnel indispensable à votre activité.
 conditions:
-  - Être lycéen·ne en première année de formation professionnelle de niveau 3
+  - Être lycéen ou lycéenne en première année de formation professionnelle de niveau 3
     et 4 dans un lycée breton.
-  - OU Être lycéen·ne intégrant une formation professionnelle sans suivre une
+  - OU Être lycéen ou lycéenne intégrant une formation professionnelle sans suivre une
     classe de seconde ou une première année de CAP, dans le cadre d’une
     réorientation de parcours scolaire (élèves « passerelles »).
 conditions_generales:
