--- a/data/benefits/javascript/region_ile_de_france-aide-régionale-au-passage-du-diplôme-daccès-aux-études-universitaires-daeu.yml
+++ b/data/benefits/javascript/region_ile_de_france-aide-régionale-au-passage-du-diplôme-daccès-aux-études-universitaires-daeu.yml
@@ -1,7 +1,7 @@
 label: aide régionale au passage du Diplôme d'accès aux études universitaires (DAEU)
 institution: region_ile_de_france
 description: La Région Ile-de-France favorise l'accès à l'enseignement supérieur
-  de tous les Francilien·ne·s à travers une aide incitative au passage du
+  de toutes les personnes habitant en Ile-de-France à travers une aide incitative au passage du
   diplôme d'accès aux études universitaires (DAEU).
 conditions:
   - Ne pas être titulaire du baccalauréat.
