--- a/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
+++ b/data/benefits/javascript/region_normandie-aides-aux-formations-paramédicales-sociales-ou-de-santé.yml
@@ -1,6 +1,6 @@
 label: aides aux formations paramédicales sociales ou de santé
 institution: region_normandie
-description: La Région Normandie finance des aides pour les étudiant·e·s et
+description: La Région Normandie finance des aides pour les étudiants ou étudiantes et
   élèves des formations sanitaires, sociales et de santé.
 conditions:
   - Être inscrit·e dans une des <a target="_blank" rel="noopener" title ="Formations éligibles - Nouvelle fenêtre"
