--- a/data/benefits/javascript/region_nouvelle_aquitaine-stages-à-létranger-–-infra-bac.yml
+++ b/data/benefits/javascript/region_nouvelle_aquitaine-stages-à-létranger-–-infra-bac.yml
@@ -1,4 +1,4 @@
-label: stage à l'étranger (lycéen·ne·s)
+label: stage à l'étranger (lycéens ou lycéennes)
 institution: region_nouvelle_aquitaine
 description: La Région finance une partie de votre stage à l'étranger d'une
   durée de 2 à 4 semaines.
