--- a/data/benefits/javascript/bretagne-aide-code-permis.yml
+++ b/data/benefits/javascript/bretagne-aide-code-permis.yml
@@ -1,7 +1,7 @@
 label: aide à la formation au code et au permis de conduire
 institution: region_bretagne
 description: Cette aide vise à favoriser l’accès à la formation et l’insertion
-  professionnelle des jeunes breton·ne·s en prenant en charge le financement de
+  professionnelle des jeunes résidant en Bretagne en prenant en charge le financement de
   leur permis de conduire.
 conditions:
   - 'Etre suivi·e par une mission locale : <a target="_blank" rel="noopener" title="Voir
