--- a/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/grand-est-aide-mobilite-internationale-etudiants.yml
@@ -1,7 +1,8 @@
-label: aide à la mobilité internationale des étudiant·e·s
+label: aide à la mobilité internationale des étudiants ou étudiantes
 institution: grand_est
-description: L'aide à la mobilité internationale des étudiant·e·s a pour but de
-  soutenir la mobilité internationale des étudiant·e·s de la région Grand Est.
+description:
+  L'aide à la mobilité internationale des étudiants ou étudiantes a pour but de
+  soutenir la mobilité internationale des étudiants ou étudiantes de la région Grand Est.
 prefix: l’
 conditions_generales:
   - type: regions
