--- a/data/benefits/javascript/guadeloupe-bourse-sociale.yml
+++ b/data/benefits/javascript/guadeloupe-bourse-sociale.yml
@@ -1,7 +1,7 @@
 label: bourse sociale
 institution: guadeloupe
 description: La bourse sociale attribuée par la Région Guadeloupe contribue à
-  soutenir financièrement les stagiaires, élèves, étudiant·e·s poursuivant des
+  soutenir financièrement les stagiaires, élèves, étudiants ou étudiantes poursuivant des
   formations sociales dans les établissements de formation agréés par la
   collectivité régionale.
 conditions:
