--- a/data/benefits/javascript/hauts-de-france-transport-etudiants.yml
+++ b/data/benefits/javascript/hauts-de-france-transport-etudiants.yml
@@ -1,6 +1,7 @@
-label: aide au Transport aux Particuliers - Étudiant·e·s
+label: aide au Transport aux Particuliers - étudiants ou étudiantes
 institution: hauts_de_france
-description: Cette aide est destinée aux étudiant·e·s qui utilisent leur
+description:
+  Cette aide est destinée aux étudiants ou étudiantes qui utilisent leur
   véhicule pour rejoindre leur lieu d'étude. Elle s'effectue par la prise en
   charge d'une partie des frais liés au trajet domicile-étude.
 conditions:
