--- a/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
+++ b/data/benefits/javascript/provence-alpes-cote-azur-fonds-sanitaire-social.yml
@@ -1,8 +1,9 @@
-label: fonds d’Aide Régional aux étudiant·e·s du secteur sanitaire et du travail
+label:
+  fonds d’Aide Régional aux étudiants ou étudiantes du secteur sanitaire et du travail
   social
 institution: region_provence_alpes_cote_azur
 description: Il s’agit d’une aide financière destinée à améliorer les conditions
-  de vie des élèves et étudiant·e·s inscrit·e·s dans une filière sanitaire ou du
+  de vie des élèves et étudiants ou étudiantes inscrit·e·s dans une filière sanitaire ou du
   travail social en Région Provence-Alpes-Côte d'Azur.
 conditions:
   - Être stagiaire de la formation professionnelle inscrit·e en formation
