--- a/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
+++ b/data/benefits/javascript/region-auvergne-rhone_alpes-bourse-mobilite-internationale-etudiants.yml
@@ -1,7 +1,7 @@
 label: bourse Région Mobilité Internationale - Etudiant·e·s
 institution: region_auvergne_rhone_alpes
 description: Cette aide a pour but de soutenir la mobilité internationale des
-  étudiant·e·s en études supérieures de la Région Auvergne-Rhône-Alpes.
+  étudiants ou étudiantes en études supérieures de la Région Auvergne-Rhône-Alpes.
 conditions:
   - Être inscrit·e dans un établissement d'enseignement supérieur
     d'Auvergne-Rhône-Alpes.
