--- a/data/benefits/javascript/region-ile-de-france-bourse-installtation-des-étudiants-en-kinésithérapie-et-maïeutique.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourse-installtation-des-étudiants-en-kinésithérapie-et-maïeutique.yml
@@ -1,6 +1,6 @@
-label: Bourse à l'installation des étudiant·e·s en kinésithérapie et maïeutique
+label: Bourse à l'installation des étudiants ou étudiantes en kinésithérapie et maïeutique
 institution: region_ile_de_france
-description: La Région Ile-de-France soutient l'installation des étudiant·e·s en
+description: La Région Ile-de-France soutient l'installation des étudiants ou étudiantes en
   kinésithérapie et maïeutique (sages-femmes) dans les zones franciliennes
   carencées en professionnels de santé.
 conditions:
