--- a/data/benefits/javascript/region-ile-de-france-bourses-mobilite-bts.yml
+++ b/data/benefits/javascript/region-ile-de-france-bourses-mobilite-bts.yml
@@ -1,4 +1,4 @@
-label: bourses Mobilité pour les étudiant·e·s en BTS
+label: bourses Mobilité pour les étudiants ou étudiantes en BTS
 institution: region_ile_de_france
 description: La Région propose une aide financière pour réaliser un stage à
   l'étranger d'une durée supérieure ou égale à 4 semaines.
