--- a/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
+++ b/data/benefits/javascript/region-normandie-pass-monde-etudes-secondaires.yml
@@ -3,7 +3,7 @@ imgSrc: img/benefits/logo-pass-monde.jpg
 institution: region_normandie
 description: L’aide Pass Monde accompagne la mobilité individuelle des
   normand·e·s inscrit·e·s dans un cursus d’étude du secondaire en formation
-  initiale ou continue (lycéen·ne·s, apprenti·e·s, jeunes en contrats de
+  initiale ou continue (lycéens ou lycéennes, apprenti·e·s, jeunes en contrats de
   professionnalisation et stagiaires de la formation professionnelle).
 conditions:
   - Être inscrit·e dans un établissement normand ou dans une autre région de
